name:                scheme2luac
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adamrk/scheme2luac#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Bratschi-Kaye
maintainer:          ark.email@gmail.com
copyright:           2017 Adam Bratschi-Kaye
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Assembler
                     , Parser2
                     , CodeGenerator
                     , Macro
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , text
                     , trifecta
                     , QuickCheck
                     , mtl
  default-language:    Haskell2010

executable scheme2luac-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scheme2luac
  default-language:    Haskell2010

test-suite scheme2luac-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scheme2luac
                     , containers 
                     , hspec
                     , process
                     , filepath
                     , QuickCheck
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamrk/scheme2luac
